5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2496.log
== TEST (2019-05-09 05:40:51) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(x!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>o):
print(soma)
-- ERROR:
File "XXXX", line 9
    print(soma)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 05:41:17) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(x!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>o):
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(x!=-1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 05:41:42) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>o):
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(cont>o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 05:42:10) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:05:53) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:07:32) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+2
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- EXECUTION TIME:
0.123511
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
8
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
14
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:07:36) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+2
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:08:13) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+4
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:08:40) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+2
	cont=cont+2
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:09:25) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma*2
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:14:59) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=cont+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):
	print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:16:31) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))
if(cont>0):

print(soma)
-- ERROR:
File "XXXX", line 10
    print(soma)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:40) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1
	cont=cont+1
	num=int(input("digite um numero: "))


print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:29:08) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1
	cont=cont+1+soma
	num=int(input("digite um numero: "))


print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:30:35) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1+cont
	cont=cont+1
	num=int(input("digite um numero: "))


print(soma)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:31:25) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1+cont
	cont=cont+1
	num=int(input("digite um numero: "))


print(soma)
-- EXECUTION TIME:
0.13688
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
10
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
28
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:31:34) 
-- CODE:
cont=0
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+1+cont
	cont=cont+1
	num=int(input("digite um numero: "))


print(soma)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:06) 
-- CODE:

soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+num
	
	num=int(input("digite um numero: "))


print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:35:30) 
-- CODE:

soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+num
	
	num=int(input("digite um numero: "))


print(soma)
-- EXECUTION TIME:
0.206827
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:09) 
-- CODE:
soma=0
num=int(input("digite um numero: "))
while(num!=-1):
	soma=soma+num
	
	num=int(input("digite um numero: "))


print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:21:46) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=soma+n
	n=int(input("digite um numero: "))
print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:22:27) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=soma+n
	n=int(input("digite um numero: "))
print(soma)
	
-- EXECUTION TIME:
0.161528
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
